@@ -526,7 +526,6 @@ def binding = ["enums": CoreImports.getClassImports()
                                         findAll { GraphTraversalSource.class.equals(it.returnType) }.
                                         findAll {
                                             !it.name.equals("clone") &&
-                                                    !it.name.equals(TraversalSource.Symbols.withBindings) &&
                                                     !it.name.equals(TraversalSource.Symbols.withRemote) &&
                                                     !it.name.equals(TraversalSource.Symbols.withComputer)
                                         }.
